--- a/README
+++ b/README
@@ -1,1 +1,48 @@
-## HELLO
+## Student Link
+
+# Overview
+Welcome to Student Link, a collaborative learning platform that connects students for study sessions. This web application is designed to simplify the process of finding study partners, forming study groups, and fostering a supportive academic community.
+
+# Repository
+Link to deployed code: https://github.com/shannontice/Student-Link
+
+# Features
+Ease of Use: A user-friendly interface for seamless navigation, making it easy to post study requests, connect with peers, and schedule study sessions.
+
+Friendly Community: Join a welcoming community of students who share similar academic interests. Share insights, seek support, and build lasting connections.
+
+Help with any Academic Topic: Whether it's math, science, literature, or programming, Student Link is your go-to platform for finding study partners with expertise in various subjects.
+
+# Visual Functionality
+The following image shows the website's functionality:
+
+# Usage
+Head to the deployed link: 
+
+create an account or login
+
+if you'd like to join a study session go to the dashboard page click on a group you want to join and follow up on the post conatact info.
+
+if you'd like to create a study group post click the pencil icon on the bottom right, fill out the queries, and post, then that's it!
+
+# Technologies Used
+Backend:
+Node.js
+Express.js
+Sql
+Handlebars
+
+Frontend:
+HTML
+CSS
+JavaScript
+Tailwind
+
+# Contributing
+We welcome contributions to improve and expand Student Link! If you have ideas, bug fixes, or new features, feel free to submit a pull request.
+
+# Issues and Support
+If you encounter any issues or need assistance, please create an issue. We're here to help!
+
+# License
+This project is licensed under the MIT License.
