--- a/README
+++ b/README
@@ -16,6 +16,8 @@ Help with any Academic Topic: Whether it's math, science, literature, or program
 # Visual Functionality
 The following image shows the website's functionality:
 
+![Project 2 demo gif](https://github.com/shannontice/Student-Link/assets/121901118/fcbef853-00b5-4fea-acdf-7c452799f1c7)
+
 # Usage
 Head to the deployed link: 
 
