--- a/README
+++ b/README
@@ -16,7 +16,7 @@ Help with any Academic Topic: Whether it's math, science, literature, or program
 # Visual Functionality
 The following image shows the website's functionality:
 
-![Project 2 demo gif](https://github.com/shannontice/Student-Link/assets/121901118/fcbef853-00b5-4fea-acdf-7c452799f1c7)
+![Project 2 demo gif](https://github-production-user-asset-6210df.s3.amazonaws.com/121901118/302691763-fcbef853-00b5-4fea-acdf-7c452799f1c7.gif?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAVCODYLSA53PQK4ZA%2F20240206%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20240206T161339Z&X-Amz-Expires=300&X-Amz-Signature=97553a19a706ed77a21fa833da3d46e094d0b52aba8c2972184ab8990b4f795b&X-Amz-SignedHeaders=host&actor_id=121901118&key_id=0&repo_id=751473048)
 
 # Usage
 Head to the deployed link: 
